--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           />
           <ul class="nav_list">
             <li>Home</li>
-            <li>Tour</li>
+            <li><a href="tour.html">Tour</a></li>
             <li>History</li>
             <li>Culinary</li>
             <li>Blog</li>
@@ -66,8 +66,35 @@
         </main>
 
         <main class="second_block">
+
+          <div class="icon">
+            <ul class="social_icon_list">
+              <li> 
+                <a href="https://www.facebook.com/?locale=uk_UA">
+                  <svg class="social_icon">
+                    <use class="useX" href="img/symbol-defs.svg#facebook" />
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/?lang=uk">
+                  <svg class="social_icon">
+                    <use class="useX" href="img/symbol-defs.svg#twitter" />
+                  </svg>
+                </a>
+              </li>
+              <li> 
+                <a href="https://www.instagram.com/">
+                  <svg class="social_icon">
+                    <use class="useX" href="img/symbol-defs.svg#instagram" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
           <div class="second_description">
-            <h2 class="cappa">Cappadocia</h2>
+            <div class="article_text_box">
+              <h2 class="cappa">Cappadocia</h2>
             <p class="description_mini">
               Cappadocia is an ancient region in <br />
               Turkey, famed for its mysterious <br />moon-like landscape dotted
@@ -76,7 +103,8 @@
             </p>
 
             <div class="view_btn">
-              <a href="">View Details </a>
+              <a href="">View Details <svg><use class="arrow" hearf="img/symbol-defs.svg#arrow-right2"/></svg></a>
+            </div>
             </div>
           </div>
         </main>
