--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
         </main>
 
         <main class="second_block">
-
           <div class="icon">
             <ul class="social_icon_list">
-              <li> 
+              <li>
                 <a href="https://www.facebook.com/?locale=uk_UA">
                   <svg class="social_icon">
                     <use class="useX" href="img/symbol-defs.svg#facebook" />
@@ -83,7 +82,7 @@
                   </svg>
                 </a>
               </li>
-              <li> 
+              <li>
                 <a href="https://www.instagram.com/">
                   <svg class="social_icon">
                     <use class="useX" href="img/symbol-defs.svg#instagram" />
@@ -92,19 +91,27 @@
               </li>
             </ul>
           </div>
-          <div class="second_description">
-            <div class="article_text_box">
-              <h2 class="cappa">Cappadocia</h2>
-            <p class="description_mini">
-              Cappadocia is an ancient region in <br />
-              Turkey, famed for its mysterious <br />moon-like landscape dotted
-              with <br />volcanic cones and underground <br />
-              cities.
-            </p>
-
-            <div class="view_btn">
-              <a href="">View Details <svg><use class="arrow" hearf="img/symbol-defs.svg#arrow-right2"/></svg></a>
-            </div>
+          <div class="absolute">
+            <div class="second_description">
+              <div class="article_text_box">
+                <h2 class="cappa">Cappadocia</h2>
+                <p class="description_mini">
+                  Cappadocia is an ancient region in <br />
+                  Turkey, famed for its mysterious <br />moon-like landscape
+                  dotted with <br />volcanic cones and underground <br />
+                  cities.
+                </p>
+              </div>
+              <a href=""
+                ><div class="view_btn">
+                  <p>View Details</p>
+                  <img
+                    class="arrow"
+                    src="img/arrow/SVG/arrow-right2.svg"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
             </div>
           </div>
         </main>
