--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header>
           <img
             class="logo"
-            src="/img/logo.svg"
+            src="../img/logo.svg"
             alt="logo"
             width="94.5"
             height="36.7"
@@ -40,7 +40,7 @@
           </ul>
           <img
             class="search_icon"
-            src="/img/search.svg"
+            src="../img/search.svg"
             alt="search_button"
             width="18"
             height="18"
