--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                   <img
                     class="arrow"
                     src="img/arrow/SVG/arrow-right2.svg"
+                    width="15px"
+                    height="15px"
                     alt="arrow"
                   />
                 </div>
