--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
             </p>
 
             <div class="explore_btn">
-              <a style="text-transform: uppercase" href="">EXPLORE</a>
+              <a
+                style="text-transform: uppercase"
+                href="https://youtu.be/rr5CMS2GtCY?si=D89ZhYqbz-6-dmoM"
+                >EXPLORE</a
+              >
             </div>
           </article>
-          <article class=""></article>
         </main>
 
         <main class="second_block">
@@ -102,7 +105,7 @@
                   cities.
                 </p>
               </div>
-              <a href=""
+              <a href="https://youtu.be/K0ZNtpTYKpI?si=-bNiBsk_VQqQvCm3"
                 ><div class="view_btn">
                   <p>View Details</p>
                   <img
