--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
             </p>
 
             <div class="explore_btn color-change-5x">
-              <a
-                style="text-transform: uppercase"
-                href="https://youtu.be/rr5CMS2GtCY?si=D89ZhYqbz-6-dmoM"
+              <a style="text-transform: uppercase" href="#" id="open_forma"
                 >EXPLORE</a
               >
             </div>
@@ -98,7 +96,7 @@
                   cities.
                 </p>
               </div>
-              <a href="https://youtu.be/K0ZNtpTYKpI?si=-bNiBsk_VQqQvCm3"
+              <a href="#" id="open_black_screen"
                 ><div class="view_btn">
                   <p>View Details</p>
                   <img
@@ -115,6 +113,18 @@
         </main>
       </div>
       <div class="background kenburns-left"></div>
+      <div class="forma" id="forma">
+        <div class="forma_container">
+          <form autocomplete="on" class="forma_body" id="forma_body">
+            <input type="text" placeholder="Name" />
+            <input type="text" placeholder="LastName" />
+            <button>GetCall</button>
+            <div class="forma_close" id="forma_close">&#10006</div>
+          </form>
+          
+        </div>
+      </div>
     </section>
+    <script src="./main.js"></script>
   </body>
 </html>
