--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="dark">
@@ -125,7 +128,7 @@
             </div>
            
             
-            <div class="name_box">
+            <div class="name_box montserrat">
               <input type="text" placeholder="Firstname">
               <input type="text" placeholder="Lastname">
             </div>
@@ -133,8 +136,8 @@
             <input type="email" placeholder="Email" />
             <input type="password" placeholder="Password" />
             <input type="password" placeholder="Confirm password" />
-            <button class="submit_btn">Submit</button>
-            <p class="sub_title_p">Already have an acount ? <a href="">Signin</a> </p>
+            <button class="submit_btn montserrat">Submit</button>
+            <p class="sub_title_p" id="signin_now">Already have an acount ? <a href="">Signin</a> </p>
             <div class="forma_close" id="forma_close">&#10006</div>
           </form>
         </div>
