--- a/index.html
+++ b/index.html
@@ -128,15 +128,16 @@
             </div>
            
             
-            <div class="name_box montserrat">
-              <input type="text" placeholder="Firstname" required>
-              <input type="text" placeholder="Lastname" required>
+            <div  class="name_box montserrat">
+              <input type="text" placeholder="Firstname" minlength="2" required pattern="^[a-zA-Z]+$">
+              <input type="text" placeholder="Lastname" minlength="2" required pattern="^[a-zA-Z]+$">
             </div>
 
-            <input type="email" placeholder="Email" required/>
-            <input type="password" placeholder="Password" required/>
-            <input type="password" placeholder="Confirm password" required />
-            <button class="submit_btn montserrat">Submit</button>
+            <input type="email" placeholder="Email" minlength="6" maxlength="26" required />
+
+            <input  type="password" minlength="6" maxlength="26" placeholder="Password" pattern="^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9]+$" required/>
+            <input id="valid_in" type="password" minlength="6" maxlength="26" placeholder="Confirm password" required pattern="^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9]+$"/>
+            <button class="submit_btn montserrat" id="submit_disable">Submit</button>
             <p class="sub_title_p" id="signin_now">Already have an acount ? <a href="">Signin</a> </p>
             <div class="forma_close" id="forma_close">&#10006</div>
           </form>
