--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             <input name="email" type="email" placeholder="Email" minlength="6" maxlength="26" required />
             <input name="number" type="text" placeholder="Number" minlength="6" maxlength="26" required />
 
-            <input  type="password" minlength="6" maxlength="26" placeholder="Password" pattern="^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9]+$" required/>
-            <input id="valid_in" type="password" minlength="6" maxlength="26" placeholder="Confirm password" required pattern="^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9]+$"/>
+            <input  type="password" minlength="6" maxlength="26" placeholder="Password" pattern="^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9]+$" />
+            <input id="valid_in" type="password" minlength="6" maxlength="26" placeholder="Confirm password"  pattern="^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9]+$"/>
             <button class="submit_btn montserrat" id="submit_disable">Submit</button>
             <p class="sub_title_p" id="signin_now">Already have an acount ? <a href="">Signin</a> </p>
             <div class="forma_close" id="forma_close">&#10006</div>
